# save-rust

./: .gitignore  AGENTS.md  API.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  benchmark_workers.sh  build-android.sh  build-apple.sh  build-xcframework.sh  nextest.toml  save-android-next-steps.md  status_updater.rs
.cargo/: config-android.toml  config-mac.toml
.claude/skills/veilid-upgrade/: SKILL.md
.claude/skills/veilid-upgrade/references/: dependency-map.md
.config/: nextest.toml
.github/workflows/: lint_and_test.yml
docs/: ARCHITECTURE.md
src/: actix_route_dumper.rs  android_bridge.rs  constants.rs  error.rs  groups.rs  jni_globals.rs  lib.rs  logging.rs  mac.rs  main.rs  media.rs  models.rs  module.modulemap  repos.rs  server.rs  snowbird_group.rs  status_updater.rs  utils.rs
