[package]
name = "save"
version = "0.1.3"
authors = ["Richard Puckett <richard@open-archive.org"]
description = "Decentralized Web for Save"
edition = "2021"
publish = false

[lib]
name = "save"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[features]
android = []
ios = []

# Increases build time by... a lot. Too much for dev.
# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
save-dweb-backend = { git = "https://github.com/OpenArchive/save-dweb-backend", version = "0.1.3" }
tokio = { version = "~1.39",  default-features = false, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
lazy_static = "1.4"
actix-web = { version = "4", features = ["macros"] }
futures = "0.3"
eyre = "0.6.12"
veilid-core = { git = "https://gitlab.com/veilid/veilid.git", version = "0.4.3" }
once_cell = "1.20.1"
base64-url = "3.0.0"
thiserror = "1.0.64"
anyhow = "1.0.89"
async-trait = "0.1.83"
tmpdir = "1.0.0"
num_cpus = "1.16.0"
tokio-stream = "0.1.16"
bytes = "1.7.2"
iroh-blobs = "0.24.0"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
tokio = { version = "~1.39",  default-features = false,  features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
veilid-core = { git = "https://gitlab.com/veilid/veilid.git", version = "0.4.3" }
blake3 = "1.5.4"

[dev-dependencies]
env_logger = "0.10"
serial_test = "2.0"
