[package]
name = "save"
version = "0.2.0"
authors = ["Richard Puckett <richard@open-archive.org"]
description = "Decentralized Web for Save"
edition = "2021"
publish = false

[lib]
name = "save"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "save-server"
path = "src/bin/server.rs"

[features]
android = []
ios = []

# Increases build time by... a lot. Too much for dev.
# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
save-dweb-backend = { git = "https://github.com/OpenArchive/save-dweb-backend", tag = "v0.3.1" }
tokio = { version = "^1.43",  default-features = false, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
lazy_static = "1.4"
actix-web = { version = "4", features = ["macros"] }
futures = "0.3"
eyre = "0.6.12"
veilid-core = { git = "https://gitlab.com/veilid/veilid.git", tag = "v0.5.1" }
once_cell = "1.20.1"
base64-url = "3.0.0"
thiserror = "1.0.64"
anyhow = "1.0.89"
async-trait = "0.1.83"
tmpdir = "1.0.0"
num_cpus = "1.16.0"
tokio-stream = "0.1.16"
bytes = "1.7.2"
iroh-blobs = "0.24.0"
log = "0.4"
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
tokio = { version = "^1.43",  default-features = false,  features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
veilid-core = { git = "https://gitlab.com/veilid/veilid.git", tag = "v0.5.1" }
blake3 = "1.8.2"

[dev-dependencies]
serial_test = "2.0"

# Patch Veilid 0.5.1 to fix an underflow bug discovered during testing.
# This patch should be removed once the fix is merged upstream.
[patch."https://gitlab.com/veilid/veilid.git"]
veilid-core = { git = "https://gitlab.com/tripledoublev/veilid.git", branch = "fix-underflow" }

# Use local save-dweb-backend for testing fixes before publishing.
[patch."https://github.com/OpenArchive/save-dweb-backend"]
save-dweb-backend = { path = "../save-dweb-backend" }
